# BLR-Krylov

./: README.md
BLR-Krylov code/: CMakeLists.txt  readme.md
BLR-Krylov code/cmake/: FindZFP.cmake
BLR-Krylov code/data/: convert_csr.py.txt
BLR-Krylov code/data/fem/: generate_fem_data.py
BLR-Krylov code/include/: blr_krylov_types.h  blr_sparse_preprocess.h  ca_krylov_basis.h  fused_spgemm.h  iter_controller.h
BLR-Krylov code/include/utils/: morton_code.cuh  valid_map.h  zfp_gpu.cuh
BLR-Krylov code/src/: blr_sparse_preprocess.cu  ca_krylov_basis.cu  fused_spgemm.cu  iter_controller.cu  main.cu
BLR-Krylov code/src/utils/: morton_code.cu  valid_map.cu  zfp_gpu.cu
